--- a/source/dialogs/regression-line/regression-line-modal.html
+++ b/source/dialogs/regression-line/regression-line-modal.html
@@ -11,17 +11,6 @@
                         <form class="form-horizontal">
                             <table class="font-size-10px table table-bordered regressionLineTable">
                                 <thead>
-                                    <!-- <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>Areas to select data</td>
-                                        <td colspan="2">Force Fit</td>
-                                    </tr> -->
                                     <tr>
                                         <td></td>
                                         <td style="width: 7%">Display Line</td>
@@ -93,12 +82,14 @@
                                                 selected-model="regLine.polygons" 
                                                 extra-settings="selectDataSetting"
                                                 class="normal-text"></div> -->
+                                                <!-- item.id as item.datasetCurve for item in wiModal.curvesArr -->
                                             <multiselect class="input-xlarge" multiple="true"
                                                 ng-model="regLine.polygons"
-                                                options="p.idPolygon for p in wiModal.polygonList"
+                                                options="p for p in wiModal.polygonList"
                                                 change="selected()" 
                                                 ng-change="wiModal.onChange(regLine.index)">
                                             </multiselect>
+                                            {{regLine.polygons}}
                                         </td>
                                         
                                         <td style="width: 7%">
