--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -40,7 +40,8 @@
                                                         class="form-control wi-form-control padding-tb-small"
                                                         ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
                                                         ng-change="wiModal.onselectedCurveZChange()"
-                                                        ng-selected="wiModal.selectedCurveZ==item.id"></select>
+                                                        ng-selected="wiModal.selectedCurveZ==item.id">
+                                                </select>
                                             </div>
                                     </div>
 
