update filter in histogramformat, remove wi-level-menu

--- a/source/dialogs/discriminator/discriminator-modal.html
+++ b/source/dialogs/discriminator/discriminator-modal.html
@@ -27,7 +27,7 @@
                     <span class="ok-16x16"></span>&nbsp;Ok
                 </button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default">
-                    <span class="close-16x16"></span>&nbsp;Close
+                    <span class="close-16x16"></span>&nbsp;Cancel
                 </button>
             </div>
         </div>
