--- a/source/dialogs/ternary/ternary-modal.html
+++ b/source/dialogs/ternary/ternary-modal.html
@@ -8,7 +8,13 @@
             </div>
 
             <div class="modal-body">
-                <div class="container-fluid padding-0">
+                <multiselect class="input-xlarge" multiple="true"
+                    ng-model="wiModal.idPolygonTest"
+                    options="p for p in wiModal.polygonList"
+                    change="selected()">
+                </multiselect>
+                {{calculateOptions.area.polygons}}
+                <!-- <div class="container-fluid padding-0">
                     <div class="col-sm-11 padding-right-0">
                         <form class="form-horizontal form-condensed dialog-style" action="" name="modalTernary">
                             <h5 class="normal-text">Vertices Manager</h5>
@@ -123,12 +129,12 @@
                                     </label>
                                 </div>
                                 <div class="col-sm-3">
-                                    <span ng-dropdown-multiselect=""
-                                        options="wiModal.polygonList"
-                                        selected-model="calculateOptions.area.polygons"
-                                        extra-settings="selectDataSetting"
-                                        disabled="calculateOptions.type != 'Area'"
-                                        class="normal-text"></span>
+                                    <multiselect class="input-xlarge" multiple="true"
+                                        ng-model="calculateOptions.area.polygons"
+                                        options="p for p in wiModal.polygonList"
+                                        change="selected()">
+                                    </multiselect>
+                                    {{calculateOptions.area.polygons}}--
                                 </div>
                                 <div class="form-group col-sm-3" style="padding-left: 26px">
                                     <select ng-model="calculateOptions.area.exclude"
@@ -168,7 +174,7 @@
                             <span class="plus-16x16"></span>
                         </button>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="modal-footer">
                 <button ng-click="wiModal.onCalculateButtonClicked()" class="btn btn-default" ng-disabled="wiModal.getTernaryVertices().length != 3">
