--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -391,10 +391,10 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default" ng-disabled="wiModal.IsNotValid();">
+                <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default" ng-disabled="wiModal.isNotValid();">
                     <span class="apply-16x16"></span>&nbsp;Apply
                 </button>
-                <button type="button" ng-click="wiModal.onOKButtonClicked();" class="btn btn-default" ng-disabled="wiModal.IsNotValid();">
+                <button type="button" ng-click="wiModal.onOKButtonClicked();" class="btn btn-default" ng-disabled="wiModal.isNotValid();">
                     <span class="ok-16x16"></span>&nbsp;Ok
                 </button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default">
