add wi-multi-input, update discriminator

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -34,6 +34,7 @@
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
     <link href='css/wi-resizable-x.css' rel='stylesheet'>
     <link href='css/wi-reference-window.css' rel='stylesheet'>
+    <link href='css/wi-multi-input.css' rel='stylesheet'>
 
     <link href='css/wi-logplot.css' rel='stylesheet'>
     <link href='css/wi-crossplot.css' rel='stylesheet'>
@@ -61,6 +62,7 @@
     <script src="vendor/js/async.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
+    <script src="vendor/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
     <!--<script src="vendor/js/moment.min.js"></script>-->
     <script src="vendor/js/ng-file-upload.min.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
