--- a/source/html/index.html
+++ b/source/html/index.html
@@ -78,8 +78,8 @@
     <script type="text/javascript" src="vendor/js/bootstrap-colorpicker.min.js"></script>
     <script type="text/javascript" src="vendor/js/EventEmitter-4.0.3.min.js"></script>
     <script type="text/javascript" src="vendor/js/angularjs-dropdown-multiselect.min.js"></script>
-    <!-- <script type="text/javascript" src="vendor/js/lodash.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
+    <script type="text/javascript" src="vendor/js/lodash.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script> -->
     <!-- <script type="text/javascript" src="vendor/js/colorpicker-color.js"></script>
     <script type="text/javascript" src="vendor/js/colorpicker-component.js"></script>
     <script type="text/javascript" src="vendor/js/colorpicker-defaults.js"></script>
