--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -1,6 +1,16 @@
+<style>
+    #spinner-holder {
+        position: absolute;
+        border: 1px solid pink;
+        top: 0; left:0; right:0; bottom:0;
+        background-color: rgba(255,255,255,0.5);
+        z-index: 10;
+    }
+</style>
 <div class="modal fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
+            <div ng-show="wiModal.updating" id='spinner-holder'></div>
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <h4 class="modal-title">Crossplot Format</h4>
