--- a/source/dialogs/discriminator/discriminator-modal.html
+++ b/source/dialogs/discriminator/discriminator-modal.html
@@ -12,7 +12,7 @@
                 </div>
                 <div style="padding: 0.5em 0; border: 2px solid black">
                     <div class="container-fluid">
-                        <wi-condition-node item='wiModal.conditionTree' curve-options='wiModal.curvesArr' on-delete='wiModal.onDeleteNode' root="wiModal.conditionTree"></wi-condition-node>
+                        <wi-condition-node item='wiModal.conditionTree' curve-options='wiModal.curvesArr' root="wiModal.conditionTree"></wi-condition-node>
                     </div>
                 </div>
                 <div class='form-group conditionExpr'>
