add wi-custom-input, update wi-multi-input, evaluateExpr

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -35,6 +35,7 @@
     <link href='css/wi-resizable-x.css' rel='stylesheet'>
     <link href='css/wi-reference-window.css' rel='stylesheet'>
     <link href='css/wi-multi-input.css' rel='stylesheet'>
+    <link href='css/wi-custom-input.css' rel='stylesheet'>
 
     <link href='css/wi-logplot.css' rel='stylesheet'>
     <link href='css/wi-crossplot.css' rel='stylesheet'>
