--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -12,11 +12,11 @@
                             <div class="form-group">
                                 <label class="col-sm-2">Top Depth (m)</label>
                                 <div class="col-sm-2">
-                                    <input type="number" class="form-control wi-form-control" step="0.01" ng-model="wiModal.props.referenceTopDepth">
+                                    <input type="number" class="form-control wi-form-control" step="any" ng-model="wiModal.props.referenceTopDepth">
                                 </div>
                                 <label class="col-sm-3">Bottom Depth (m)</label>
                                 <div class="col-sm-2">
-                                    <input type="number" class="form-control wi-form-control" step="0.01"
+                                    <input type="number" class="form-control wi-form-control" step="any"
                                     ng-model="wiModal.props.referenceBottomDepth">
                                 </div>
                                 <div class="col-sm-3">
@@ -27,21 +27,7 @@
                             <div class="form-group">
                                 <label class="col-sm-2">Scale</label>
                                 <div class="col-sm-2">
-                                    <input type="number" list='scaleOpt' class="form-control wi-form-control"
-                                    ng-model="wiModal.props.referenceScale">
-                                    <datalist id="scaleOpt">
-                                        <option value="20">1:20</option>
-                                        <option value="50">1:50</option>
-                                        <option value="100">1:100</option>
-                                        <option value="200">1:200</option>
-                                        <option value="300">1:300</option>
-                                        <option value="500">1:500</option>
-                                        <option value="1000">1:1000</option>
-                                        <option value="2000">1:2000</option>
-                                        <option value="3000">1:3000</option>
-                                        <option value="5000">1:5000</option>
-                                        <option value="-1">Full</option>
-                                    </datalist>
+                                    <wi-custom-input model='wiModal.props.referenceScale' options='wiModal.scaleOpt'></wi-custom-input>
                                 </div>
                                 <label class="col-sm-3">Vert. Line Number</label>
                                 <div class="col-sm-2">
