--- a/source/dialogs/authentication/authentication-modal.html
+++ b/source/dialogs/authentication/authentication-modal.html
@@ -53,6 +53,25 @@
                                             required ng-blur="wiModal.checkPasswords()">
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <label class="control-label col-sm-4" for="useremailReg">Email</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control" id="useremailReg" name="useremailReg" ng-model="wiModal.useremailReg">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-sm-4" for="userfullnameReg">Full Name</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control" id="userfullnameReg" name="userfullnameReg" ng-model="wiModal.userfullnameReg">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-sm-4" for="userfullnameReg">Captcha</label>
+                                    <div class="col-sm-8">
+                                        <img style="float: left" src="http://dev.sflow.me/captcha.png">
+                                        <input type="text" class="form-control" style="width: 30%;float: left" id="captcha" name="captcha" ng-model="wiModal.captcha">
+                                    </div>
+                                </div>
                                 <hr>
                                 <button type="submit" class="btn btn-default float-right margin-bottom-1_5em" ng-click="wiModal.onRegisterButtonClicked()">Register</button>
                             </form>
