--- a/source/dialogs/prompt/prompt-modal.html
+++ b/source/dialogs/prompt/prompt-modal.html
@@ -10,7 +10,7 @@
 					<div class="form-group">
 						<label class="control-label col-sm-4" for="name">{{wiModal.inputName}}:</label>
 						<div class="col-sm-8">
-							<input ng-if="!wiModal.type" type="text" class="form-control"
+							<input ng-if="wiModal.type != 'select'" type="{{wiModal.type}}" class="form-control"
 								ng-model="wiModal.input"
                                 wi-enter="wiModal.onOkButtonClicked()" 
                                 ng-click="wiModal.error = null"
