--- a/source/dialogs/curve-average/curve-average-modal.html
+++ b/source/dialogs/curve-average/curve-average-modal.html
@@ -126,8 +126,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.close()'><span class="run-16x16"></span>Run</button>
-                <button class='btn btn-default' ng-click='wiModal.close()'><span class="close-16x16"></span>Cancel</button>
+                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="run-16x16"></span>Run</button>
+                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>Cancel</button>
             </div>
         </div>
     </div>
