update wi-custom-input, add curve-convolution-modal

--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -27,7 +27,7 @@
                             <div class="form-group">
                                 <label class="col-sm-2">Scale</label>
                                 <div class="col-sm-2">
-                                    <wi-custom-input model='wiModal.props.referenceScale' options='wiModal.scaleOpt'></wi-custom-input>
+                                    <wi-custom-input type='number' model='wiModal.props.referenceScale' options='wiModal.scaleOpt'></wi-custom-input>
                                 </div>
                                 <label class="col-sm-3">Vert. Line Number</label>
                                 <div class="col-sm-2">
