--- a/source/dialogs/authentication/authentication-modal.html
+++ b/source/dialogs/authentication/authentication-modal.html
@@ -68,7 +68,7 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-4" for="userfullnameReg">Captcha</label>
                                     <div class="col-sm-8">
-                                        <img style="float: left" src="http://dev.sflow.me/captcha.png">
+                                        <img style="float: left" src="{{wiModal.captchaPNG}}">
                                         <input type="text" class="form-control" style="width: 30%;float: left" id="captcha" name="captcha" ng-model="wiModal.captcha">
                                     </div>
                                 </div>
